--- a/simpleplatformer/Simple Platformer/.classpath
+++ b/simpleplatformer/Simple Platformer/.classpath
@@ -2,10 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib/jars/lwjgl.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Simple Platformer/lib/natives"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/Users/waco001/Downloads/lwjgl-2.9.1/jar/lwjgl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
